[package]
name = "brancher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = "4.5.7"
git2 = "0.19.0"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = { version = "0.2.0-alpha.6" }
