[package]
name = "brancher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "brancher"
path = "src/bin.rs"

[lib]
name = "brancher"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.86"
clap = "4.5.7"
env_logger = "0.11.3"
git2 = "0.19.0"
gouqi = "0.7.1"
openai_api_rust = "0.1.9"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = { version = "0.2.0-alpha.6" }
